전체적인 코드 정리