@@ -14,7 +14,6 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -30,7 +29,6 @@ public class SwaggerConfiguration {
 	 * 5. 작성일       : 2022. 01. 15.
 	 * </pre>
 	 *
-	 * @throws Exception
 	 */
 	private ApiInfo apiInfo() {
 		return new ApiInfoBuilder()
@@ -48,7 +46,6 @@ public class SwaggerConfiguration {
 	 * 5. 작성일       : 2022. 01. 15.
 	 * </pre>
 	 *
-	 * @throws Exception
 	 */
 	@Bean
 	public Docket commonApi() {
@@ -59,8 +56,8 @@ public class SwaggerConfiguration {
 				.apis(RequestHandlerSelectors.basePackage("com.tsp.new_tsp_front.api"))
 				.paths(PathSelectors.ant("/api/**"))
 				.build()
-				.securityContexts(Arrays.asList(securityContext()))
-				.securitySchemes(Arrays.asList(apikey()));
+				.securityContexts(List.of(securityContext()))
+				.securitySchemes(List.of(apikey()));
 	}
 
 	/**
@@ -72,7 +69,6 @@ public class SwaggerConfiguration {
 	 * 5. 작성일       : 2022. 01. 15.
 	 * </pre>
 	 *
-	 * @throws Exception
 	 */
 	private ApiKey apikey() {
 		return new ApiKey("JWT", "Authorization", "header");
@@ -87,6 +83,6 @@ public class SwaggerConfiguration {
 		AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
 		AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
 		authorizationScopes[0] = authorizationScope;
-		return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+		return List.of(new SecurityReference("JWT", authorizationScopes));
 	}
 }
